--- a/stomp_moveit/package.xml
+++ b/stomp_moveit/package.xml
@@ -14,6 +14,12 @@
 
   <build_depend>cmake_modules</build_depend>
   <build_depend>eigen</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>rospy</build_depend>
+  <exec_depend>rospy</exec_depend>
+  <build_depend>std_msgs</build_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 
   <build_export_depend>eigen</build_export_depend>
 
